@@ -23,7 +23,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.60)
-AC_INIT(avrdude, 6.1-20140313, avrdude-dev@nongnu.org)
+AC_INIT(avrdude, 6.1-20140516, avrdude-dev@nongnu.org)
 
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
@@ -33,16 +33,14 @@ AC_CONFIG_SRCDIR([main.c])
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS(ac_cfg.h)
 
+LT_INIT()
+
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_SED
 AC_PROG_YACC
 AC_PROG_LEX
-AN_MAKEVAR([RANLIB], [AC_PROG_RANLIB])
-AN_PROGRAM([ranlib], [AC_PROG_RANLIB])
-AC_DEFUN([AC_PROG_RANLIB], [AC_CHECK_TARGET_TOOL(RANLIB, ranlib, :)])
-AC_PROG_RANLIB
 AN_MAKEVAR([AR], [AC_PROG_AR])
 AN_PROGRAM([ar], [AC_PROG_AR])
 AC_DEFUN([AC_PROG_AR], [AC_CHECK_TARGET_TOOL(AR, ar, :)])
